--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,14 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
-<ul>
-    <li><a href="users">Users</a></li>
-    <li><a href="meals">Meals</a></li>
-</ul>
+<a href="users">Users</a><br>
+UserId:
+<form method="post" action="users">
+    <select name="userId">
+        <option selected value="1">user</option>
+        <option value="2">admin</option>
+    </select>
+    <button type="submit">meals</button>
+</form>
 </body>
 </html>
